--- a/Housing-checkpoint.ipynb
+++ b/Housing-checkpoint.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+   
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n"
    ]
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fill in the lines below: drop columns in training and validation data\n",
+    "# drop columns in training and validation data\n",
     "drop_X_train = X_train.select_dtypes(exclude=['object'])\n",
     "drop_X_valid = X_valid.select_dtypes(exclude=['object'])"
    ]
